--- a/DevMentor.Context/DevMentor.Context.csproj
+++ b/DevMentor.Context/DevMentor.Context.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStoreStrategy.cs" />
     <Compile Include="Store\DefaultStoreStrategy.cs" />
+    <Compile Include="Store\InMemoryStoreStrategy.cs" />
     <Compile Include="Store\JsonHelper.cs" />
     <Compile Include="Store\JsonStoreStrategy.cs" />
     <Compile Include="Store\XmlHelper.cs" />
