add mongodb store

--- a/DevMentor.Context.MongoDb/DevMentor.Context.MongoDb.csproj
+++ b/DevMentor.Context.MongoDb/DevMentor.Context.MongoDb.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{47D585B8-3460-41AF-83FF-90322ACC6B65}</ProjectGuid>
+    <ProjectGuid>{5E53BFBD-A8B5-43FB-8EE5-CC7271B70A72}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevMentor.Context</RootNamespace>
-    <AssemblyName>DevMentor.Context</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>DevMentor.Context.MongoDb</RootNamespace>
+    <AssemblyName>DevMentor.Context.MongoDb</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,12 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="MongoDB.Bson, Version=2.2.3.3, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MongoDB.Bson.2.2.3\lib\net45\MongoDB.Bson.dll</HintPath>
       <Private>True</Private>
@@ -49,39 +43,27 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\BaseEntity.cs" />
-    <Compile Include="IFileSet.cs" />
-    <Compile Include="FileContext.cs" />
-    <Compile Include="FileEntityEntry.cs" />
-    <Compile Include="FileSet.cs" />
-    <Compile Include="Interception\IBeforeSave.cs" />
-    <Compile Include="Interception\IBeforeLoad.cs" />
-    <Compile Include="Store\XmlSerializerCache.cs" />
+    <Compile Include="MongoDbStoreStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IStoreStrategy.cs" />
-    <Compile Include="Store\DefaultStoreStrategy.cs" />
-    <Compile Include="Store\InMemoryStoreStrategy.cs" />
-    <Compile Include="Store\JsonHelper.cs" />
-    <Compile Include="Store\JsonStoreStrategy.cs" />
-    <Compile Include="Store\XmlHelper.cs" />
-    <Compile Include="Store\XmlStoreStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DevMentor.Context\DevMentor.Context.csproj">
+      <Project>{47d585b8-3460-41af-83ff-90322acc6b65}</Project>
+      <Name>DevMentor.Context</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
