--- a/DevMentor.Context/packages.config
+++ b/DevMentor.Context/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.2.3" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.2.3" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net45" />
 </packages>
