--- a/FileContext.nuspec
+++ b/FileContext.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>FileContext</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>FileContext</title>
         <authors>Paul Mizel</authors>
         <licenseUrl>https://github.com/pmizel/DevMentor.Context.FileContext</licenseUrl>
@@ -12,7 +12,7 @@
         <developmentDependency>true</developmentDependency>
         <description>FileContext is a data access layer (DAL) Framework for rapid data driven application development (RDDAD) append to EntityFramework.</description>
         <summary>FileContext is a data access layer (DAL) Framework for rapid data driven application development (RDDAD) append to EntityFramework.</summary>
-        <tags>entityframework, filecontext, file db, database, filedb, no-sql, dbcontext, alternativ</tags>
+        <tags>entityframework, filecontext, file db, database, filedb, no-sql, mongodb, json, xml, inmemory, dbcontext, devmentor, brockhaus-ag</tags>
         <dependencies>
             <group targetFramework=".NETFramework4.5">
                 <dependency id="EntityFramework" version="6.1.3" />
@@ -20,7 +20,7 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="content\Controller\_._" target="content\Controller\_._" />
+        <!--<file src="content\Controller\_._" target="content\Controller\_._" />-->
         <file src="Nuget\content\Data\Cryptography\Hash.cs.ps" target="content\Data\Cryptography\Hash.cs.pp" />
         <file src="Nuget\content\Data\Entities\Base.cs.ps" target="content\Data\Entities\Base.cs.pp" />
         <file src="Nuget\content\Data\Entities\User.cs.ps" target="content\Data\Entities\User.cs.pp" />
