--- a/DevMentor.Context.Test/DevMentor.Context.Test.csproj
+++ b/DevMentor.Context.Test/DevMentor.Context.Test.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CacheStoreTests.cs" />
     <Compile Include="JsonTests.cs" />
     <Compile Include="InMemoryStoreTests.cs" />
     <Compile Include="XmlStoreTests.cs" />
