--- a/DevMentor.Context.Test/DevMentor.Context.Test.csproj
+++ b/DevMentor.Context.Test/DevMentor.Context.Test.csproj
@@ -48,6 +48,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Transactions" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -57,7 +58,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -65,6 +68,7 @@
     <Compile Include="CacheStoreTests.cs" />
     <Compile Include="JsonTests.cs" />
     <Compile Include="InMemoryStoreTests.cs" />
+    <Compile Include="FileManagerTest.cs" />
     <Compile Include="XmlStoreTests.cs" />
     <Compile Include="MongoDbStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
